Updated
# Some bugs fixed
# Example changed and detailed